buggery/tests/errors/uninitialized_variable3.bgr
t:
  b("some string @INTERP")

b(A):
  print (A)
